--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "lowdb": "^5.0.0",
-    "cors": "^2.8.5",
     "multer": "1.4.5-lts.2"
   }
 }
