--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "lowdb": "^7.0.1",
+    "express": "^4.18.2",
+    "lowdb": "^5.0.0",
     "multer": "1.4.5-lts.2"
   }
 }
